Fix action button flickering and size change when loading.

--- a/services/app-web/src/components/ActionButton/ActionButton.module.scss
+++ b/services/app-web/src/components/ActionButton/ActionButton.module.scss
@@ -11,6 +11,10 @@
       margin-left: .5rem
 }
 
+.buttonTextWithoutIcon {
+  vertical-align: middle;
+}
+
 .successButton {
     background: $theme-color-success;
     &:hover {
